# llms

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Makefile  README.md  TASK.md  WORK_LOG_SYSTEM.md  agents.json  commands.json  pyproject.toml  requirements.txt  sync_claude_configs.py
.archive/: README.md
.archive/builders/: requirements.txt
.archive/claude_sync/: QUICKSTART.md  __init__.py  settings_analyzer.py
.archive/commands/: feature-implement.md
.archive/user-story-system/: .gitignore  README.md  deploy-global.sh  requirements.txt
.claude/: settings.json
.claude/agents/: analysis-specialist.md  architecture-designer.md  dependency-manager.md  design-orchestrator.md  doc-generator-agent.md  documentation-researcher.md  (+5 more)
.codex/: AGENTS.md  config.toml  instructions.md
claude_sync/: CONFLICT_RESOLVER_README.md  IMPLEMENTATION_SUMMARY.md  SETTINGS_ANALYZER_README.md  SETTINGS_ANALYZER_SUMMARY.md  SETTINGS_ANALYZER_USAGE_EXAMPLES.md  SYNC_README.md  audit.py  conflict_resolver.py  file_handler.py  reporter.py  sync.py
docs/: VALIDATION.md  skill-catalog.md  skill-map.excalidraw
frontend-design-system/: README.md  fetch_design_systems.py
manifests/: agents.json  commands.json  docs.json
scripts/: copy-to-global.sh  sync-to-global.sh  update_docs.sh  watch-and-sync.sh
tests/: README_TESTING.md  test_adapter_integration.py  test_command_builder.py  test_doc_fetcher.py  test_llm_adapter.py  test_skill_builder.py  test_skill_builder.py.old  test_sync.py
user-story-system/: REORGANIZATION-COMPLETE.md  SCRIPTS_README.md
(+665 files in other folders)
